<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/kezel_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_default_backg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeresActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:listSelector="@drawable/list_selector_flatcolor" >

        <Button
            android:id="@+id/btn_kezel_rogzit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/btn_backg"
            android:text="@string/btn_rogzit"
            android:textColor="@color/btn_text" />

        <Button
            android:id="@+id/btn_kezel_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@color/btn_backg"
            android:text="@string/btn_kilep"
            android:textColor="@color/btn_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/kezel_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <ImageView
        android:id="@+id/kezel_expanded_image"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:contentDescription="@string/description_zoom_touch_close"
        android:gravity="center"
        android:visibility="invisible" />

</LinearLayout>